--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,3 +15,9 @@ body {
     color: aquamarine;
     font-size: 16px;
 }
+
+h2 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 300;
+    font-size: 42px;
+}
