--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -21,3 +21,9 @@ h2 {
     font-weight: 300;
     font-size: 42px;
 }
+
+h3 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 21px;
+    color: gray;
+}
