--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 h1 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
     font-weight: normal;
     font-size: 50px;
     color: white;
@@ -9,21 +9,24 @@ h1 {
 body {
     background-color: black;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .links {
     color: aquamarine;
     font-size: 16px;
+    text-decoration: underline;
 }
 
 h2 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
     font-weight: 300;
     font-size: 42px;
+    color: white;
 }
 
 h3 {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
     font-size: 21px;
     color: gray;
 }
