Add fix for media not loading

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,6 +18,10 @@ body {
     text-decoration: underline;
 }
 
+.logo {
+    margin-top: 20px;
+}
+
 h2 {
     
     font-weight: 300;
@@ -34,4 +38,5 @@ h3 {
 footer {
     text-align: right;
     color: gray;
+    font-size: 25px;
 }
